force-app/main/default/objects/ContentVersion/fields/fieldtype__c.field-meta.xml
<CustomField>
    <fullName>fieldtype__c</fullName>
    <label>fieldtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>