force-app/main/default/objects/ContentVersion/fields/ID_Type__c.field-meta.xml
<CustomField>
    <fullName>ID_Type__c</fullName>
    <defaultValue>&quot;OTHER&quot;</defaultValue>
    <label>ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KTP</fullName>
                <label>Kartu Tanda Penduduk</label>
            </value>
            <value>
                <fullName>SIM</fullName>
                <label>Surat Izin Mengemudi</label>
            </value>
            <value>
                <fullName>PASSPORT</fullName>
                <label>Passport</label>
            </value>
            <value>
                <fullName>KIMS</fullName>
                <label>Kartu Izin Menetap Sementara</label>
            </value>
            <value>
                <fullName>KITAS</fullName>
                <label>Kartu Izin Tinggal Terbatas</label>
            </value>
            <value>
                <fullName>KITAP</fullName>
                <label>Kartu Izin Tinggal Permanen</label>
            </value>
            <value>
                <fullName>POA</fullName>
                <label>Power of Attorney (Surat Kuasa)</label>
            </value>
            <value>
                <fullName>NPWP</fullName>
                <label>Nomor Pokok Wajib Pajak</label>
            </value>
            <value>
                <fullName>SIUP</fullName>
                <label>Surat Izin Usaha Perdagangan</label>
            </value>
            <value>
                <fullName>NIB</fullName>
                <label>Nomor Induk Berusaha</label>
            </value>
            <value>
                <fullName>DOI</fullName>
                <label>Deed of Incorporation (Akta Pendirian dan Pengesahan dari Menteri Hukum dan HAM)</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <default>true</default>
                <label>Other Document</label>
            </value>
            <value>
                <fullName>Depan</fullName>
            </value>
            <value>
                <fullName>Belakang</fullName>
            </value>
            <value>
                <fullName>Kiri</fullName>
            </value>
            <value>
                <fullName>Kanan</fullName>
            </value>
            <value>
                <fullName>Lampiran</fullName>
            </value>
            <value>
                <fullName>STNK</fullName>
            </value>
            <value>
                <fullName>Lainnya</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>