force-app/main/default/objects/ContentVersion/fields/LinkedEntityId__c.field-meta.xml
<CustomField>
    <fullName>LinkedEntityId__c</fullName>
    <label>LinkedEntityId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>