force-app/main/default/objects/ContentVersion/fields/SyncFile__c.field-meta.xml
<CustomField>
    <fullName>SyncFile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SyncFile</label>
    <type>Checkbox</type>
</CustomField>