force-app/main/default/objects/ContentVersion/validationRules/BRI_File_Size_Not_More_Than_25_MB.validationRule-meta.xml
<ValidationRule>
    <fullName>BRI_File_Size_Not_More_Than_25_MB</fullName>
    <active>true</active>
    <errorConditionFormula>IF ( ContentSize &gt; VALUE( $Label.BRI_File_Size_More_Than_25MB ) , True, False)</errorConditionFormula>
    <errorMessage>Anda tidak dapat memasukkan file lebih dari 25 MB</errorMessage>
</ValidationRule>