force-app/main/default/objects/ContentVersion/validationRules/BRI_Only_Supported_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>BRI_Only_Supported_Format</fullName>
    <active>true</active>
    <errorConditionFormula>AND(FileType &lt;&gt; &apos;PDF&apos;, FileType &lt;&gt; &apos;WORD_X&apos;, FileType &lt;&gt; &apos;POWER_POINT_X&apos;, FileType &lt;&gt; &apos;POWER_POINT&apos;, FileType &lt;&gt; &apos;EXCEL_X&apos;, FileType &lt;&gt; &apos;EXCEL&apos;,FileType &lt;&gt; &apos;PNG&apos;,FileType &lt;&gt; &apos;JPG&apos;, FileType &lt;&gt; &apos;JPEG&apos;, FileType &lt;&gt; &apos;MPG&apos;, FileType &lt;&gt; &apos;MP4&apos;, FileType &lt;&gt; &apos;ZIP&apos;, FileType &lt;&gt; &apos;UNKNOWN&apos; )</errorConditionFormula>
    <errorMessage>Hanya format .docx, .pdf, .ppt, .pptx, .xls, zip, rar, MP4, MPG dan .xlsx yang didukung dan diperbolehkan !</errorMessage>
</ValidationRule>